openafs (1.4.4.dfsg1-3) unstable; urgency=low

  * When loading a module using the upstream naming convention, don't
    append the .mp to the module name for modprobe.  (Closes: #420597)

 --

openafs (1.4.4.dfsg1-2) unstable; urgency=low

  * Debian kernels as of 2.6.20 enable CONFIG_PARAVIRT, which redefines
    several core kernel calls as redirects through a paravirt.ops table
    that's marked GPL-only.  This breaks all non-GPL modules that used
    those (previously generally exported) calls even indirectly.  Apply a
    hack to switch from spin_lock_irq to spin_lock_irqsave to avoid the
    paravirt redirection so that the module will build.
  * Enable ucontext for all Linux builds with glibc 2.4 or later, not just
    with i386 and amd64, and (following an upstream patch) always use
    ucontext on ia64.  Newer versions of glibc change internal structures
    in ways that cause the old LWP code to have stack overflows.
    (Closes: #419903) 
  * Apply upstream patch to crashes on contention in afs_xuser when a
    process in a PAG exits.  Thanks, Chaskiel Grundman.
  * When determining the AFS sysname for kernel module builds, add
    explicit cases for 2.6 kernels for all architectures that support them
    (everything except non-64-bit sparc_linux).  Fixes build problems with
    ia64 and probably other architectures.  Thanks to Ippokratis Pandis
    for the debugging help.  (Closes: #411818)
  * Prefer alpha_linux_26 to alpha_linux_24 for the non-kernel build on
    Alpha, now that the source supports it.
  * Add support for the s390x architecture.  Upstream supports it and
    there's no reason not to.
  * Fix the watch file to remove .dfsg\d+ when comparing versions.

 -- Russ Allbery <rra@debian.org>  Thu, 19 Apr 2007 13:26:33 -0700

openafs (1.4.4.dfsg1-1) unstable; urgency=low

  * Repackage upstream source to remove two additional files covered under
    the APSL.  (Closes: #416685)